--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@vercel/node": "^5.0.0",
     "react": "^18.3.0",
     "react-dom": "^18.3.0",
+    "react-markdown": "^10.1.0",
     "zod": "^4.1.0"
   },
   "devDependencies": {
